implemented UIAlertController when winning with action to start a new game or cancel; improved shuffle function; discarded unnecessary nPairs constant

--- a/Memory/Base.lproj/Main.storyboard
+++ b/Memory/Base.lproj/Main.storyboard
@@ -139,10 +139,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moves" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iaE-Rr-TlE">
+                                <rect key="frame" x="643" y="54" width="55" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="movesLabel" destination="iaE-Rr-TlE" id="33s-JL-2cX"/>
                         <outletCollection property="buttons" destination="ajf-C9-KIa" collectionClass="NSMutableArray" id="bq6-gR-0h2"/>
                         <outletCollection property="buttons" destination="QgA-6f-kHc" collectionClass="NSMutableArray" id="2tF-kO-69e"/>
                         <outletCollection property="buttons" destination="L88-eO-cch" collectionClass="NSMutableArray" id="Boe-Rp-9Cl"/>
