implemented extension for NSTimeInterval to display time in the winning message and for a timer. Implemented and executed tests for the extension. Implemented timer that is displayed in timerLabel in the top left corner of the screen for the duration of the game.

--- a/Memory/Base.lproj/Main.storyboard
+++ b/Memory/Base.lproj/Main.storyboard
@@ -139,13 +139,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iaE-Rr-TlE">
-                                <rect key="frame" x="643" y="54" width="55" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="gTQ-Ag-2DD">
                                 <rect key="frame" x="343" y="974" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -158,11 +151,26 @@
                                     <action selector="newGameButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="97T-J6-FrG"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nnc-X1-8TY">
+                                <rect key="frame" x="70" y="54" width="98" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iaE-Rr-TlE">
+                                <rect key="frame" x="643" y="54" width="55" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="movesLabel" destination="iaE-Rr-TlE" id="33s-JL-2cX"/>
+                        <outlet property="timeElapsedLabel" destination="nnc-X1-8TY" id="PFW-6x-i3o"/>
                         <outletCollection property="buttons" destination="ajf-C9-KIa" collectionClass="NSMutableArray" id="bq6-gR-0h2"/>
                         <outletCollection property="buttons" destination="QgA-6f-kHc" collectionClass="NSMutableArray" id="2tF-kO-69e"/>
                         <outletCollection property="buttons" destination="L88-eO-cch" collectionClass="NSMutableArray" id="Boe-Rp-9Cl"/>
